! Alignment issues (dropdowns, flex forms, margin between buttons).

--- a/scss/elements/btn.scss
+++ b/scss/elements/btn.scss
@@ -80,6 +80,6 @@
   }
 
   & + .btn {
-    margin-left: 5px;
+    margin-left: 15px;
   }
 }
