--- a/scss/forms/flex-form.scss
+++ b/scss/forms/flex-form.scss
@@ -2,15 +2,21 @@
   flex-flow: row wrap;
 
   display: flex;
+  margin-top: -10px;
+  margin-left: -10px;
 
   .coveo-slide-toggle-label.boxed {
-    flex-basis: 0;
-    flex-grow: 1;
+    flex: auto;
 
+    width: 0;
+    margin-top: 10px;
     margin-left: 10px;
 
-    &:first-child {
-      margin-left: 0;
+    &:empty {
+      height: 0;
+      margin-top: 0;
+      border: 0;
+      padding: 0;
     }
   }
 }
